<?xml version="1.0"?>
<package format="3">
  <name>environment_controller</name>
  <version>0.0.0</version>
  <description>The environment_controller package</description>

  <maintainer email="root@todo.todo">root</maintainer>

  <license>TODO</license>


  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <depend>rclcpp</depend>
<!--  <buildtool_depend>catkin</buildtool_depend>-->

<!--  <build_depend>roscpp</build_depend>-->
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

<!--  <build_export_depend>roscpp</build_export_depend>-->
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>

<!--  <exec_depend>roscpp</exec_depend>-->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

<!--  <depend>tf2</depend>-->
<!--  <depend>tf2_ros</depend>-->
<!--  <depend>use_key</depend>-->
<!--  <depend>sensor_msgs</depend>-->

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>